google_login and two_factor Authentication

--- a/Loginapi/appsettings.json
+++ b/Loginapi/appsettings.json
@@ -4,7 +4,7 @@
     "Refreshkey":  "this is the refresh key"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=master;Trusted_Connection=True;"
+    "DefaultConnection": "Data Source=tcp:lasindad.database.windows.net,1433;Initial Catalog=lasindad;User Id=lasindad@lasindad;Password=Thisari027#"
 
   },
   "Logging": {
